--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "drizzle-orm": "^0.41.0",
-    "next": "^15.2.3",
+    "lucide-react": "^0.509.0",
+    "next": "^15.3.2",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
